# course_work4

./: README.md  main.py  pyproject.toml
Class/: Api.py  Json.py  vacancy.py
Json_data/: vacancy.json
data_json/: vacancy.json
src/: utils.py
